force-app/main/default/objects/Budget__c/fields/Amount_Earned__c.field-meta.xml
<CustomField>
    <fullName>Amount_Earned__c</fullName>
    <label>Amount Earned</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Income, ATM Deposit, Incoming Transfer</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.SubBudget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>