force-app/main/default/objects/Budget__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>✓ - Under Budget</fullName>
                <default>true</default>
                <label>✓ - Under Budget</label>
            </value>
            <value>
                <fullName>X - Over Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>