force-app/main/default/objects/Budget__c/recordTypes/SubBudget.recordType-meta.xml
<RecordType>
    <fullName>SubBudget</fullName>
    <active>true</active>
    <label>Sub Budget</label>
</RecordType>