force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Remaining__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Monthly_Budget__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Budget__c.SubBudget</value>
    </filters>
    <label>All</label>
</ListView>